# kaggle-christmas-challenge-2025

./: .gitignore  README.md
golang/: README.md  algorithm.go  go.mod  go.sum  main.go  sa_config.yaml  submission-200.csv  submission-adv.csv  submission.csv  tree-packing  tree.go
golang/cmd/packer/: main.go
golang/docs/: MUTATION_OPERATORS.md  SOLVERS.md
golang/pkg/solvers/greedy/: greedy.go
golang/pkg/solvers/grid/: grid.go  grid_ga.go
golang/pkg/solvers/sa/: advanced.go  advanced_penalty.go  advanced_test.go  base.go  collision_free.go  config.go  penalty.go
golang/pkg/tree/: algorithm.go  defaults.go  evaluation.go  geometry.go  grid.go  intersection.go  model.go  ops.go  sa_base.go  sa_collision_free.go  sa_config.go  sa_penalty.go  simulated_annealing.go  tree.go
python/: README.md  main.py  pyproject.toml  python_sa.py  sa_v2.py
results/submissions/: submission-adv-grid-200.csv  submission-grid-sa-200.csv
