[project]
name = "tree-packing-viz"
version = "0.1.0"
description = "Visualization for Tree Packing Challenge"
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
